# fluffy

./: .gitignore  LICENCE.CC0  README.md  bun.lockb  devbox.json  package.json  postcss.config.js  pyproject.toml  tailwind.config.js
.github/workflows/: deploy.yml
public/: index.html  main.min.css
public/assets/: licenceindex
src/: important-person-alg.txt  main.css
