[tool.poetry]
name = "fluffy"
version = "1.0.0"
description = "content generation for fluffy.joshwel.co"
authors = ["Mark Joshwel <mark@joshwel.co>"]
license = "Unlicense"
readme = "README.md"
packages = [
    { include = "fluffy.py", from = "src" },
]
repository = "https://github.com/markjoshwel/fluffy"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
fluffygen = 'fluffy:cli'

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.2.0"

[tool.black]
line-length = 90

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
